# gemini-meet

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TELEMETRY.md  config_meet.json  note  pyproject.toml  vertex_credentials.json
.devcontainer/: Dockerfile  devcontainer.json
client/: README.md  pyproject.toml
client/gemini_meet_client/: __init__.py  agent.py  client.py  data_types.py  datadog.py  main.py  prompts.py  utils.py
client/joinly_client/: agent.py  datadog.py  main.py
common/: README.md  pyproject.toml
dashboard/: .env.example  Dockerfile.agent  README.md  docker-compose.yml  drizzle.config.ts  middleware.ts  next.config.ts  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: app-layout.tsx  app-sidebar.tsx  log-viewer.tsx  meeting-dashboard.tsx  new-meeting-dialog.tsx  site-header.tsx  user-nav.tsx
dashboard/db/: schema.ts
dashboard/drizzle/: 0000_cheerful_gressill.sql
dashboard/lib/: auth-client.ts  auth.ts  datadog.ts  db.ts  drizzle.ts  mcp-registry.ts
dashboard/scripts/: add-ended-at-column.js  add-summary-columns.js  init-db.js  (+4 more)
datadog_json/: stt_drift.json  transcript_drift
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.lite
docs/: hackathon-submission.md
examples/: client_example.py
gemini_meet/: container.py  core.py  data_types.py  main.py  server.py  session.py  settings.py
joinly/: main.py  server.py  session.py
scripts/: docker_entrypoint.sh  setup_datadog.sh
tests/: conftest.py  test_meeting_transcription.py
(+46 files in other folders)
