[project]
name = "gemini-meet-client"
version = "0.1.18"
description = "Client for gemini_meet: Make your meetings accessible to AI Agents"
readme = "README.md"
authors = [
    { name = "dbrockmann", email = "dominik@gemini-meet" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "datadog>=0.52.1",
    "ddtrace>=2.0.0",
    "fastmcp>=2.10.5",
    "gemini-meet-common>=0.1.3",
    "openai<=1.99.1",
    "pydantic-ai-slim[anthropic,openai,google]>=0.4.9",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
gemini-meet-client = "gemini_meet_client.main:cli"

[tool.uv.sources]
gemini-meet-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemini_meet_client"]

[project.urls]
"Repository" = "https://github.com/0Shark/gemini-meet"
