[project]
name = "gemini-meet-common"
version = "0.1.3"
description = "Common library for gemini_meet: Make your meetings accessible to AI Agents"
readme = "README.md"
authors = [
    { name = "dbrockmann", email = "dominik@gemini-meet" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemini_meet_common"]

[project.urls]
"Repository" = "https://github.com/0Shark/gemini-meet"
